--- a/app/src/main/res/layout/activity_single_svg.xml
+++ b/app/src/main/res/layout/activity_single_svg.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".SvgListActivity">
+    tools:context=".SingleSvgActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -21,15 +21,6 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/fileNameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_margin="4dp"
-            android:gravity="end" />
-
 
     </androidx.cardview.widget.CardView>
 
