--- a/app/src/main/res/layout/activity_list_svg.xml
+++ b/app/src/main/res/layout/activity_list_svg.xml
@@ -14,12 +14,12 @@
             android:layout_height="0dp"
             android:clipToPadding="false"
             android:padding="1dp"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:spanCount="1"
+            app:spanCount="2"
             tools:listitem="@layout/item_svg" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
