--- a/app/src/main/res/layout/item_svg.xml
+++ b/app/src/main/res/layout/item_svg.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/rootview"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_height="wrap_content"
     tools:context=".SvgListActivity">
 
