--- a/app/src/main/res/layout/item_svg.xml
+++ b/app/src/main/res/layout/item_svg.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/rootview"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:layout_height="wrap_content"
     tools:context=".SvgListActivity">
 
     <androidx.cardview.widget.CardView
@@ -24,6 +24,14 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/colorToggleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:padding="16dp"
+            android:text="B" />
 
         <TextView
             android:id="@+id/fileNameTextView"
